Priduct create action
